// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`passwordSetup templates > buildAdminAccountSetupEmailのスナップショット 1`] = `
{
  "html": "
    <p>テスト管理者 様</p>
    <p>管理画面の管理者アカウントが作成されました。ご利用にはパスワードの設定が必要です。</p>
    <p><a href="/password-reset/confirm?token=token123">パスワードを設定する</a></p>
    <p>このリンクの有効期限は72時間です。</p>
  ",
  "subject": "管理画面 アカウント設定のご案内",
  "text": "テスト管理者 様

管理画面の管理者アカウントが作成されました。ご利用にはパスワードの設定が必要です。

パスワードを設定する: /password-reset/confirm?token=token123

このリンクの有効期限は72時間です。",
  "to": "test@example.com",
}
`;

exports[`passwordSetup templates > buildAgencyAccessGrantedEmailのスナップショット 1`] = `
{
  "html": "
    <p>テスト太郎 様</p>
    <p>会員アカウントに代理店ポータルのご利用権限が付与されました。いつものパスワードでログインいただけます。</p>
    <p><a href="/login">代理店ポータルにログインする</a></p>
  ",
  "subject": "代理店ポータル ご利用開始のお知らせ",
  "text": "テスト太郎 様

会員アカウントに代理店ポータルのご利用権限が付与されました。いつものパスワードでログインいただけます。

代理店ポータルにログインする: /login",
  "to": "test@example.com",
}
`;

exports[`passwordSetup templates > buildAgencyAccountSetupEmailのスナップショット 1`] = `
{
  "html": "
    <p>テスト代理店 様</p>
    <p>代理店ポータルのアカウントが作成されました。ご利用にはパスワードの設定が必要です。</p>
    <p><a href="/password-reset/confirm?token=token123">パスワードを設定する</a></p>
    <p>このリンクの有効期限は72時間です。</p>
  ",
  "subject": "代理店ポータル アカウント設定のご案内",
  "text": "テスト代理店 様

代理店ポータルのアカウントが作成されました。ご利用にはパスワードの設定が必要です。

パスワードを設定する: /password-reset/confirm?token=token123

このリンクの有効期限は72時間です。",
  "to": "test@example.com",
}
`;

exports[`passwordSetup templates > buildGuestPasswordSetupEmailのスナップショット 1`] = `
{
  "html": "
    <p>テスト太郎 様</p>
    <p>ご購入ありがとうございます。マイページをご利用いただくためのパスワードを設定してください。</p>
    <p><a href="/password-reset/confirm?token=token123">パスワードを設定する</a></p>
    <p>このリンクの有効期限は72時間です。</p>
  ",
  "subject": "パスワード設定のご案内",
  "text": "テスト太郎 様

ご購入ありがとうございます。マイページをご利用いただくためのパスワードを設定してください。

パスワードを設定する: /password-reset/confirm?token=token123

このリンクの有効期限は72時間です。",
  "to": "test@example.com",
}
`;
